--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,16 @@ dependencies:
   walletconnect_dart: ^0.0.11
   url_launcher: ^6.1.11
   flutter_web3: ^2.1.9
-
+  flutter_launcher_icons: ^0.13.1
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "pictures/image14.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
